--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "WebRTC chat app",
-  "version": "1.0.0",
-  "description": "Chat over web",
-  "main": "dist/index.js",
-  "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc -w",
-    "prestart": "npm run build",
-    "start": "concurrently --kill-others \"npm run watch\" \"nodemon .\""
-  },
-  "author": "Edgar",
-  "license": "ISC",
-  "dependencies": {
-    "@types/express": "^4.17.17",
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.1",
-    "nodemon": "^3.0.1"
-  }
+    "name": "WebRTC chat app",
+    "version": "1.0.0",
+    "description": "Chat over web",
+    "main": "dist/index.js",
+    "scripts": {
+        "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+        "build": "tsc",
+        "watch": "tsc -w",
+        "prestart": "npm run build",
+        "start": "nodemon .",
+        "dev": "concurrently --kill-others \"npm run watch\" \"npm run start\""
+    },
+    "author": "Edgar",
+    "license": "ISC",
+    "dependencies": {
+        "@types/express": "^4.17.17",
+        "express": "^4.18.2",
+        "socket.io": "^4.7.2",
+        "tslint": "^6.1.3",
+        "typescript": "^5.2.2"
+    },
+    "devDependencies": {
+        "concurrently": "^8.2.1",
+        "nodemon": "^3.0.1"
+    }
 }
